--- a/petwebsite.html
+++ b/petwebsite.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My Favorite Pet</h1>
-    <img src="file:///Users/Guest/Desktop/petwebsite/dog.jpeg">
+    <img src="dog.jpeg" alt="dog photo">
     <p>What i like most about my pet</p>
     <ul>
       <li>She's cute!</li>
@@ -24,5 +24,6 @@
       <li>She has curly hair</li>
       <li>She has 1 nose and tail</li>
     </ol>
+    <a href="https://unsplash.com/photos/oWTW-jNGl9I">unsplash photo website</a>
   </body>
 </html>
