add stylesheet to my petwebsite and change HTML to add class,id

--- a/petwebsite.html
+++ b/petwebsite.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Pets</title>
   </head>
   <body>
     <h1>My Favorite Pet</h1>
-    <img src="dog.jpeg" alt="dog photo">
-    <p>What i like most about my pet</p>
-    <ul>
-      <li>She's cute!</li>
-      <li>She has better hair than her mom</li>
-      <li>She barks all night long</li>
-    </ul>
-    <p>We <strong>love</strong> talking about dogs</p>
-    <ol>
-      <li>She loves to cuddle</li>
-      <li>She likes to swim</li>
-      <li>She is a softy at heart</li>
-    </ol>
-    <p>Her <em>description</em></p>
-    <ol>
-      <li>She has 4 legs</li>
-      <li>She has curly hair</li>
-      <li>She has 1 nose and tail</li>
-    </ol>
-    <a href="https://unsplash.com/photos/oWTW-jNGl9I">unsplash photo website</a>
+    <img class=resize src="dog.jpeg" alt="dog photo">
+    <div id=align>
+      <p>What i like most about my pet</p>
+      <ul>
+        <li>She's cute!</li>
+        <li>She has better hair than her mom</li>
+        <li>She barks all night long</li>
+      </ul>
+      <p>We love talking about dogs</p>
+      <ol>
+        <li>She loves to cuddle</li>
+        <li>She likes to swim</li>
+        <li>She is a softy at heart</li>
+      </ol>
+      <p>Her <em>description</em></p>
+      <ol>
+        <li>She has 4 legs</li>
+        <li>She has curly hair</li>
+        <li>She has 1 nose and tail</li>
+      </ol>
+      <a href="https://unsplash.com/photos/oWTW-jNGl9I">unsplash photo website</a>
+    </div>
   </body>
 </html>
